# large-scale-pointcloud-matching

./: .gitignore  LICENSE  README.md  Untitled Diagram.drawio  superpoint  tips.md
RPMNet/src/: Untitled.ipynb  arguments.py  mytrain.py
SapientNet/: matching_visualization.py  sapientnet_with_dgcnn.py  utility.py
cloud_preprocessing/: BUILD  CMakeLists.txt  bird_view_poi.cpp  conditional_euclidean_clustering.cpp  descriptors.cpp  descriptors.hpp  don_segmentation.cpp  euclidean_cluster_extraction.cpp  ground_filtering.cpp  ground_removal.cpp  region_growing_rgb_segmentation.cpp  region_growing_segmentation.cpp  segment_correspondences.cpp  segments_alignment.cpp  segments_correspondences.cpp  submap_correspondences.cpp
cloud_preprocessing/cpp/: h5group.cpp  segmatch_to_pcds.cpp
cloud_processing/: .clang-format
cloud_processing/cpp/: CMakeLists.txt  bird_view_dataset.cpp  bird_view_image.cpp  bird_view_poi.cpp  conditional_euclidean_clustering.cpp  correspondences.txt  euclidean_cluster_extraction.cpp  json_tutorial.cpp  make_birdview_database.sh  make_h5_database.sh  match_pcds.sh  merge_clouds.cpp  mincut_segmentation.cpp  practice_h5group.cpp  read_hdf5.cpp  safe_queue.h  segment_correspondences.cpp  submap_correspondences.cpp  test-notes.txt  thread_pool.h  uniform_sample.cpp  utility.hpp  write_hdf5.cpp
cloud_processing/python/: feature_matching.py  good_features_to_track.py  harris_detection.py  knn_match.py  poi_detection.py  segmatch_to_h5.py  sift.py
evaluation/: global_localization.py  m2dp.py  metrics.py
global_localization/: main.py
global_localization/common/: compute_pose.py  image_info.py  timer.py
global_localization/offline/: main.py
global_localization/online/: feature_extractor.py  global_localizer.py  place_recognizer.py  pose_estimator.py  spi_handler.py
global_localization/ros/src/: CMakeLists.txt  cloud_to_spi.cc  cloud_to_spi.h  node.cc  package.xml  spi_utility.cc  spi_utility.h
global_localization/ros/src/launch/: run.launch
gluenet/: GlueNet.py  dataset.py  gluenet_with_dgcnn.py  matching_visualization.py  model.py  superglue.py
model/: descnet.py
model/Birdview/: TODO.md  base_model.py  dataset.py  loss.py  netvlad.py  test.py  train.py
model/Descriptor/: descnet.py  descriptor_dataset.py  loss_function.py  pointnet2.py  train.py  visualize.py
model/Detector/: detectnet.py  train.py
model/Matcher/: matcher_dataset.py  matchnet.py  train.py  train_end_to_end.py  train_with_rtloss.py
model/PointNetVlad/: PointNetVlad.py  dataset.py  downsample.py  train.py
model/ProjFeature/: proj_feat_net.py
model/SapientNet/: GlueNet.py  dataset.py  global_localization.py  matching_visualization.py  matchnet.py  sapientnet_with_dgcnn.py  superglue.py  superpoint.py  test.py  utility.py
model/ScanContextImage/: convnet.py
model/SegmentNetvlad/: dataset.py  netvlad.py  train.py
model/Superglue/: dataset.py  matching.py  superglue.py  superpoint.py  train.py  utils.py  verify.py
model/Transform/: rtnet.py  svd_test.py
tools/: MCMC.py  cloud_processing.py  create_dataset.py  gmm.py  high_dimension_visualize.py  mymodel.py  visualize.py
tools/nclt/: generate_submaps.py
tools/nclt/python/: read_ground_truth.py  read_vel_sync.py
